--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "swagger-node-runner",
-  "version": "0.5.13",
+  "name": "@stack-fintech/swagger-node-runner",
+  "version": "0.5.14",
   "description": "Swagger loader and middleware utilities",
   "keywords": [
     "swagger",
